# SLAE_lib

./: CMakeLists.txt  matrix.hpp  namespace.cpp  tridiagonal_matrix.cpp  tridiagonal_matrix.hpp
Matrixes/: tridiagonal_matrix.cpp  tridiagonal_matrix.hpp
SLAE_Solvers/: run_solver.cpp  run_solver.hpp
Task1/: Gauss_Seidel.txt  Jacobi_data  Jacobi_data.txt  Simple_iteration.txt
Task2/: Task.ipynb  Task2.ipynb
src/: CMakeLists.txt
src/Matrixes/: CSR.cpp  Dense.cpp  Dense.hpp  Triplet.hpp  tridiagonal_matrix.cpp  tridiagonal_matrix.hpp
src/SLAE_Solvers/: BiCG.hpp  Conjugate_gradients.hpp  GMRES.hpp  Gauss_Seidel.hpp  Gradient_descent.hpp  Jacobi.hpp  SOR.hpp  Simple_iteration.hpp  run_solver.cpp  run_solver.hpp
src/Tools/: Chebyshev_polynomial.hpp  Norm.hpp  Overloads.hpp
tests/: BiCG_test.cpp  CMakeLists.txt  CSR_test.cpp  Chebyshev.cpp  Chebyshev_test.cpp  Conjugate_grad.cpp  Conjugate_grad_test.cpp  GMRES.cpp  Gauss_Seidel_test.cpp  Gradient_descent.cpp  Gradient_descent_test.cpp  Jacobi_test.cpp  SOR.cpp  Simple_iter.cpp  Simple_iter_test.cpp  test_test.cpp
